# Wall-E

./: .env.example  .gitignore  README.md  deploy_wall_e.sh  main.py  pyproject.toml  requirements.txt  wall_e.py
config/: settings.yaml
docs/: monitoring-logic.md
src/walle_bot/: __init__.py  bot.py  config.py  logging_setup.py  main.py  models.py
src/walle_bot/handlers/: commands.py
src/walle_bot/services/: moderation.py  scheduler.py  state.py
tests/: test_commands.py  test_config.py  test_moderation_service.py  test_moderation_state.py  test_scheduler.py
